@@ -302,7 +302,7 @@ $cfgSources['localsql'] = array(
         'homeFax' => 'object_homefax',
         'workPhone' => 'object_workphone',
         'cellPhone' => 'object_cellphone',
-        'assistantPhone' => 'object_assistantphone',
+        'assistPhone' => 'object_assistantphone',
         'fax' => 'object_fax',
         'pager' => 'object_pager',
         'title' => 'object_title',
@@ -330,7 +330,7 @@ $cfgSources['localsql'] = array(
                                'workCity', 'workProvince', 'workPostalCode',
                                'workCountry', 'workAddress', 'timezone'),
         _("Communications") => array('email', 'homePhone', 'workPhone',
-                                     'assistantPhone', 'homeFax',
+                                     'assistPhone', 'homeFax',
                                      'cellPhone', 'fax', 'pager', 'imaddress',
                                      'imaddress2', 'imaddress3'),
         _("Organization") => array('title', 'role', 'company', 'department', 'logo'),
