@@ -2,6 +2,7 @@
 v3.0.8-git
 ----------
 
+[jan] Fix attribute name for assistant phone (Bug #10449).
 
 
 ------
